# vasputil

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.old  LICENSE  MANIFEST.in  Makefile  Makefile.am  Makefile.in  NEWS  README  README.rst  acinclude.m4  aclocal.m4  comp-lf95.mk  comp-xlf95.mk  configure  configure.ac  configure.in  copydist.sh  depend.mk  dosplot.py  runtests.py  setup.py  vasputil
autom4te.cache/: output.0  requests  traces.0
config/: acx_blas.m4  acx_blas95.m4  acx_f90.m4  acx_f90_config_header.m4  acx_f90_libdir.m4  acx_f90_modname.m4  acx_f90_module.m4  acx_f90_module_naming.m4  acx_f90_mpi.m4  acx_fc_command_line.m4  acx_fc_library_setup.m4  acx_fc_search_path.m4  acx_getkw.m4  acx_lapack.m4  acx_lapack95.m4  acx_mpi.m4  acx_subst_fcflags.m4  alpha_linux.conf  ax_f90_header.m4  ax_f90_internal_headmod.m4  ax_f90_library.m4  ax_f90_library_setup.m4  ax_f90_module.m4  ax_f90_module_extension.m4  ax_f90_module_flag.m4  ax_fc_search_path.m4  check_gnu_make.m4  dec_osf.conf  i386_linux.conf  ia64_linux.conf  ibm_aix.conf  mkdep90.py  unknown.conf
doc/: README.html  vasputil.css  vasputil.html
lib/m/: printcoords.m  rotate.m  rotate_molecule.m  rotatez.m  translate.m  translate_molecule.m
lib/python/: runtests.py
lib/python/vasputil/: __init__.py  chg.py  dos.py  geometry.py  supercell.py
lib/python/vasputil/tests/: POSCAR2  test_dos.py  test_geometry.py  test_supercell.py
oldmake/: Makefile.common  Makefile.lf95  Makefile.pgf90  Makefile.xlf  comp-ifort9.mk  comp-pathf90.mk  comp-pgf90.mk
python/vasputil/: __init__.py  dosplot.py  supercell.py
scripts/: vasputil_atomsdistance  vasputil_atomsmoved  vasputil_chgarith  vasputil_chgplaneplot  vasputil_direct2cartesian  vasputil_dosplot  vasputil_interpolate  vasputil_nearestneighbors  vasputil_plane2atom  vasputil_poscar2xyz  vasputil_zlayers
src/: Makefile.am  Makefile.in  conf.f90  conf.lst  conf.mod  config.h.in  depend.mk  f2kcli.f90  f2kcli.lst  f2kcli.mod  f77_lapack.f90  f77_lapack.lst  f77_lapack.mod  f95_lapack.lst  f95_lapack.mod  geometry.f90  geometry.lst  geometry.mod  kind_params.f90  kind_params.lst  kind_params.mod  la_auxmod.lst  la_auxmod.mod  la_dgesdd.lst  la_dgesv.f90  la_dgesv.lst  la_erinfo.lst  la_precision.lst  la_precision.mod  lattice.f90  lattice.lst  lattice.mod  mathconst.f90  mathconst.lst  mathconst.mod  poscar_io.f90  sc_file_convert.f90  supercell_core.f90  supercell_core.lst  supercell_core.mod  (+10 more)
srcbak/: conf.f90  f95_lapack.f90  kind_params.f90  la_auxmod.f90  la_dgesdd.f90  la_erinfo.f90  la_precision.f90  lattice.f90  supercell_io.f90  vasputil.f90
vasputil/: __init__.py  chg.py  dos.py  geometry.py  supercell.py
vasputil/tests/: POSCAR  POSCAR2  __init__.py  test_dos.py  test_geometry.py  test_supercell.py
